import + smol logic cleanup